--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-rough-notation": "^1.0.3"
   },
   "devDependencies": {
