--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@superfaceai/one-sdk": "^2.4.1",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-rough-notation": "^1.0.3"
+    "react-rough-notation": "^1.0.3",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
